# Python

./: .gitignore  README.md  Test.ipynb  automlTest.py
arti_package/: README.md  setup.py
arti_package/arti/: __init__.py
automl_pipeline/: LICENSE  README.md  pyproject.toml  verify_package.py
automl_pipeline/automl/: __init__.py  automl.py
notebooks/: AutoMlTest.ipynb  Bayesian_Demo.ipynb  Cross_val_kNN.ipynb  Decision_Tree_Demo.ipynb  Untitled.ipynb  kNN_demo_a.ipynb  kNN_demo_b.ipynb  lin_reg_demo.ipynb  logistic.ipynb  reg_poly_demo.ipynb
scripts/: exercise_1_solutions.py  exercise_2_solutions.py  exercise_3_solutions.py
