[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-quickpipe"
version = "1.0.0"
authors = [
  { name="AutoML Team", email="info@automl.example.com" },
]
description = "A comprehensive ML library that automates the entire pipeline"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "ipython",
]

[project.urls]
"Homepage" = "https://github.com/automl-team/automl-quickpipe"
"Bug Tracker" = "https://github.com/automl-team/automl-quickpipe/issues"
